[project]
name = "comfyui-image-oasis"
description = "Oasis Suite for ComfyUI: Image Oasis (all-in-one image gen), Video Oasis Viewer (preview/encode/scene bar/clip/movie), and LTX2.3 Oasis (all-in-one LTX video). Stable node ids ImageOasis, VideoOasisPreview, LTX23Oasis."
version = "1.5.0"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "NikoDemon80", email = "262659861+NikoDemon80@users.noreply.github.com" },
]
keywords = ["comfyui", "image-generation", "video-generation", "ltx", "flux", "qwen-image-edit", "sd3", "sdxl", "auraflow", "krea2"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "spandrel",
    "spandrel-extra-arches",
]

[project.urls]
Homepage = "https://github.com/NikoDemon80/ComfyUI-Image-Oasis"
Repository = "https://github.com/NikoDemon80/ComfyUI-Image-Oasis"
Issues = "https://github.com/NikoDemon80/ComfyUI-Image-Oasis/issues"

[tool.comfy]
PublisherId = "nikodemon80"
DisplayName = "Image Oasis"
